--- a/VRChat/50/1264650.html
+++ b/VRChat/50/1264650.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bn3WCA2IVpWiKxBiKKjBumfwAv7xaN+HC3K6YD8s/Ao="></script>
+    "ew9JDKP/M1BtHpc5IFaOYIW7HGvRzNbZb2T2gnjV4eM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Snow globe, Dolphin, Seascape","description":"【説明】\nVRChatでの使用を想定したインテリア置物です。\nもちろん、ゲームや動画等でも使用可能です。\n\n制作者:milycaon\n\n【内容物】\nFBXデータ\nsnowglobe_seascape.fbx\n\nセットアップ済みパッケージ\nsnowglobe_seascape.unitypackage\n\nテクスチャデータ5枚\n\n【利用規約】\n・商用利用可\n・データの再配布禁止\n・改変可\n・本データの利用によって生じた損害等の一切の責任を負いかねます。","url":"https://booth.pm/ja/items/1264650","offers":{"priceCurrency":"JPY","@type":"Offer","price":"280"},"image":"https://booth.pximg.net/c/620x620/0c610873-24b4-4ca7-99bc-658b1d83be54/i/1264650/34902982-67da-49f0-9f2c-9ae7d987a486_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bn3WCA2IVpWiKxBiKKjBumfwAv7xaN+HC3K6YD8s/Ao="></script>
+    nonce="ew9JDKP/M1BtHpc5IFaOYIW7HGvRzNbZb2T2gnjV4eM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -407,9 +407,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
