--- a/VRChat/13/1263213.html
+++ b/VRChat/13/1263213.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "RgZruEF+aCeVOLs1644gm9TFInMFcA6AbhekIz1mgnM="></script>
+    "2NN3dBEW8CfK8CutvMFhQUCHv2ff2KcowjliOduKf84="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat] Engel Effect Pack (ワイヤーフレームシェーダー付)","description":"エフェクト3点（白い羽、パーティクル、天使の輪）の詰め合わせです。天使の輪はほぼおまけです。ブースで使用していたワイヤーフレームシェーダーをさらにおまけで入れています。\n\nunitypackege形式で配布しています。基本的にはVRChatでの使用を想定していますが、ほかの用途で使用してもかまいません。\n\n※(2019/3/10) 白い羽にColliderがついていたことにより意図しない挙動を引き起こすバグを修正しました。すでに購入された方には、ご迷惑をおかけして大変申し訳ありません。再度ダウンロードをお願いいたします。\n※(2019/3/13) 白い羽を細かくカスタマイズできるようにアップデートしました。また、一部のワールドで白い羽が光りすぎてしまう問題が報告されています。必要ならWingShaderのBrightnessの値を小さくしてみてください。","url":"https://booth.pm/ja/items/1263213","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/6bb945b6-60a3-4e57-9454-44e6bfd4032b/i/1263213/9052e7a2-e3bc-49ca-bb95-50b512bea679_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RgZruEF+aCeVOLs1644gm9TFInMFcA6AbhekIz1mgnM="></script>
+    nonce="2NN3dBEW8CfK8CutvMFhQUCHv2ff2KcowjliOduKf84="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -462,9 +462,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
