--- a/VRChat/67/1264567.html
+++ b/VRChat/67/1264567.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZGopBR0kSg4AhFie9I9dpcr5JV7IOlCbVbaPEfxgF6w="></script>
+    "45G4upJku+NmPKIJSPSJJmJ4uf7VMTPSaTM6R2FK3Tw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【羽鳥ぽぽぽType】激マブ！レース鳩アバター(灰ごま柄/BC)【無料版】","description":"VR羽鳥鳩舎作出\n灰ごま柄（BC）の翼を持つレース鳩のアバターです。\nみんなで鳩になろう！！\n\n\n（※当モデルにマフラーは含まれません）\n（※当モデルの売り上げおよびカンパはモデルの質の向上とvtuber羽鳥ぽぽぽの運営に充てられます）\n\n【仕様】\n・unity2017.4でunitypackage化されています。\n・zipファイルを展開してご利用ください。\n・そのままVRChatなどに持ち込めるポリゴン数です。\n・口パクもあります。\n・ただし、VRChat専用に作られたモデルではないので、ウェイトやリギングなど、色々と調子の悪い部分があります、必要に応じて鳩の面倒を見れる人推奨です。\n\n【規約】\n・テクスチャ等の素材を含む当モデル、またはその改変物の再配布、並びにデータを元に制作されたグッズなどの許可なき販売はかたくお断りいたします。\n・公序良俗に反する使用をしてはいけません。\n・「羽鳥ぽぽぽ」になりすますのはやめましょう。\n・鳩をいじめる目的で利用してはいけません。\n・レース鳩の普及に努めましょう。","url":"https://booth.pm/ja/items/1264567","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d1def8d0-8300-4cb0-92c4-7d478075a721/i/1264567/271b70df-5c1c-4252-acaf-a5289b23b5b8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZGopBR0kSg4AhFie9I9dpcr5JV7IOlCbVbaPEfxgF6w="></script>
+    nonce="45G4upJku+NmPKIJSPSJJmJ4uf7VMTPSaTM6R2FK3Tw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -362,9 +362,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
