--- a/VRChat/80/1264580.html
+++ b/VRChat/80/1264580.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8RPMftNoayLqmDFz99hcmuvcWUmb34FYJS/C0vbhpLw="></script>
+    "nIl/kQPJz5sxWORL32aPr95lCF7dsvyikIud6H9fJ4s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル  ケンタウロス娘","description":"ケンタウロスの女の子です。\n\n『オリジナル3Dモデル　ケンタウロス娘』は、Genericを使用して制作しております。\n一般的なVRChat向けHumanoidモデルで実行可能な動作の多くが対応していない仕様となっております。\nVRChatをデスクトップモードで遊ぶときや、離席中のAFKアバターとして使用していただけますと幸いです。","url":"https://booth.pm/ja/items/1264580","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/56dcbdb8-5ce9-4f53-9a10-1249a7f0aa6f/i/1264580/4ce8e55a-51e4-4d0c-95d3-c74e43386d9f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8RPMftNoayLqmDFz99hcmuvcWUmb34FYJS/C0vbhpLw="></script>
+    nonce="nIl/kQPJz5sxWORL32aPr95lCF7dsvyikIud6H9fJ4s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
