--- a/VRChat/03/1264503.html
+++ b/VRChat/03/1264503.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lfuVTljzjGzlv5uYSQJNXfrk4Yg57t0xA/UALDBi5TY="></script>
+    "WDUQu6Um+9KEA21/OEpdFzciwWZ43zifFCVHcjnNEQc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『パワードスーツ』","description":"■アップデート情報（最終更新日2020年11月30日）\n・VRM対応\n→2020年11月30日、対応版をアップしました。\n・内股現象の対処\n→2019年4月対処済み。当ページ一番下にて対処法を記載しました。\n\n■概要\n・格好良い3Dモデルを創りたいと考え、製作しました\n↓\n「格好良いといえばパワードスーツ」\n↓\n「どういうパワードスーツなら格好良くなるのか？」\n↓\n「色々と作例を調べると人間感と機械感が両立しつつも、上手く交じるといい感じになるか？」\n↓\n「これはパワードスーツがあくまでも人間の能力の拡張であって、機械的な外装自体は主体ではないのか」\n↓\n人間感＝筋肉感を残しながら機械感のある外装を組み立てました。\n\n・Unity、VRChatでの使用を想定しています（装備品でなくアバターです！）\n・VRChat以外にも、Unity、UnrealEngine、VRやAR、ゲームやアプリ等ご自由にお使い下さい\n・68405ポリゴン\n・Humanoidリグ\n・VRChat上でのHumanoidアバターとしての動作確認済み\n\n■フォルダ構成\n・モデルフォルダ\nPowerdSuit.fbx\n\n・UnityPackageフォルダ\nPowerdSuit.unitypackage\nモデル、テクスチャー、マテリアルが含まれるUnityパッケージデータになります。\n\n・VRMフォルダ\nVRM形式のモデルになります。\n\n■VRChat上での利用方法\n・Unityのバージョン2017.4.15f1でプロジェクトを作成してください\n・VRCSDKを公式サイトからダウンロード\n　Asetts → Import Package → Custom PackageからVRSDKをインポートしてください。\n・PowerdSuit.unitypackageを展開し、mainシーンを開き、アバターとしてアップロード可能です。\n\n■今後の対応予定\n・3Dプリント品の販売\n・Oculus Quest対応\n・フルボディトラッキング対応\n\n■利用規約及び免責事項\n・本モデルを購入した時点で本利用規約に同意したものとします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n・当データ又は改変したものを使用したことにより発生したトラブルや損失に関して作者は一切の責任を負いません。\n\n･営利利用＝可能\n商用利用は可能ですが、著作権は製作者であるIshiyamaTokinaにあります。\n･改変＝可能\nマテリアルを変える等、自由に改変してお使いいただけます。\n･再配布＝不可\n第三者が本モデルを容易に使用可能な状態での使用を禁止します。\n購入者が自身のアバターとして使用するのは可能ですが、VRChatのWorld製作等ペデスタルとしての使用は禁止です。アバターコピーを防ぐためPrivateでのアップロードをお願いします。\n･政治、宗教、他者を貶める目的での使用を禁止します。\n\n■備考\n・モデルについての質問、不具合、その他感想等ありましたら\nhttps://twitter.com/IshiyamaTokina\nまで気軽に連絡してください！\n\n・使用ツール\nZBrush、3D-Coat\n・バーチャルマーケット2参加　ミュージアムC　ブース名イシヤマーケット\n\n■内股現象への対処\n2019年4月にて\n「何もしていないアイドル時にモデルが内股になる」という問題が確認されています。 \nこの問題について原因と対処法が判明したため、ご報告させて頂きます。\n\n原因は2019年3月7日時点でVRChat公式からダウンロードできるVRChatSDKにて、VRC avatar descriptorスクリプトのDefault animation setパラメータのMaleとFemaleの設定が標準で逆になっているためです。 \n参考リンク：https://twitter.com/s_asagiri_v/status/1117038896347410432\n\nこの内股現象が生じており、アイドル時のモーションを内股にしたくない方は、対処としましては、Femaleに設定の上でアップロードをお願い致します。 \n（副作用として、アイドル時以外のモーションは女性になってしまうのでご注意下さい） \n（また、最新版VRChatSDKにて内股現象が生じていない場合、変更は不要です）","url":"https://booth.pm/ja/items/1264503","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2400"},"image":"https://booth.pximg.net/c/620x620/f643ce77-7aec-4214-83d3-af9aaa1c7652/i/1264503/e42373cf-0207-4252-a15e-81224b0f6d61_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lfuVTljzjGzlv5uYSQJNXfrk4Yg57t0xA/UALDBi5TY="></script>
+    nonce="WDUQu6Um+9KEA21/OEpdFzciwWZ43zifFCVHcjnNEQc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -463,9 +463,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
