--- a/VRChat/14/1264514.html
+++ b/VRChat/14/1264514.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3ERpFQw1HrAs9C4/Nd2Zs3WqP1RcTvHzukI9FR6LUu4="></script>
+    "w/nbKyuRcfSgnaPRdy2oyOfrQ7RZlp5TzECcv2oGcnM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ユメ』","description":"オリジナル3Dモデル『ユメ』\n製作者 うつつ\n\n※利用規約が記載されていますので、ご了承の上での購入をお願いします。\n\n本モデルはUnityのHumanoid形式に対応したオリジナルモデルです。\nVRChatでの使用を想定して製作していますが、ゲームや動画配信等でもご利用いただけます。","url":"https://booth.pm/ja/items/1264514","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3500","highPrice":"3500"},"image":"https://booth.pximg.net/c/620x620/72453db8-560c-4406-822c-77d172acd49c/i/1264514/a64936cf-087e-443f-8bc1-45830a6ad8de_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3ERpFQw1HrAs9C4/Nd2Zs3WqP1RcTvHzukI9FR6LUu4="></script>
+    nonce="w/nbKyuRcfSgnaPRdy2oyOfrQ7RZlp5TzECcv2oGcnM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -672,9 +672,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
