--- a/VRChat/28/1264528.html
+++ b/VRChat/28/1264528.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "J1MVcHcPda1QRth2ndcbLX3DezzaeyOIQQvFBkly15o="></script>
+    "3Vhm5gpsdUOzznCkCF06JL9u+8hWALgdIVKDGVoumEs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『木葉天狗娘』","description":"オリジナル3Dモデル『木葉天狗娘ver1.00』紹介文\n\nVRChatでの利用を想定したHumanoid形式の3Dモデルです。\n\n・三角ポリゴン数:19,022ポリゴン\n・リップシンク：15種+5種（あ、い、う、え、おの母音）\n・サンプルアニメーション:6種\n\n---------------------------------------------------------\n●内容物\n\n・wolf_teng_ver.1.00.fbx\n全てのパーツが一つのオブジェクトに合成されたモデルデータです。\n\n・Texture\npingファイルが4枚とnormalmap画像2枚\n\n\nWolf_Teng.unitypackage\nセットアップされたモデルデータが入っているunitypackageファイルです。\n\n●導入方法\n1. Unity 2017.4.15f1で空のUnityプロジェクトを作成してください\n\n2. VRCSDKをインポートしてください\n\n3.Wolf_Teng.unitypackageをダブルクリックしてインポートしてください\n\n4.インポートが完了したらWolf_Teng/Prefabs/WolfTengをhierarchyに展開してください。\n\n利用規約\n\n当モデルデータをいずれかの形で利用された場合、本利用規約に同意したものとします。\n\n・商業利用について\n当モデルは主にVRChatでの利用を想定しています。\n当モデル及び改造モデルを使用したゲーム、アニメーション、アプリでの利用は可能です。\n同様に、動画配信等の営利（金銭が発生する）活動における利用も可能です。\n\n・モデルの改変について\n当モデルに関するデータの改変は自由です。\n\n\n・著作権について\n当モデル及び改変データの持つ著作権は大本の制作者である\"bobcat\"に帰属するものとします。\n\n・R-18・R-18Gへの利用について\n特に規制は設けていません。此処の判断にお任せします。\n\n・禁止事項\n当モデルのモデルデータ・テクスチャデータの再配布・販売は\n改変データを含めて禁止します。\n政治、宗教活動、特定個人や団体への誹謗中傷目的での使用も禁止します。\n禁止事項が発覚した場合、当モデルの販売停止の可能性があります。\n\n・トラブルについて\n当モデルを使用したことによる\n金銭・機器・機会等のトラブルによる損失に対し、\nbobcatは一切の責任を負わないものとします。\n\n不明な点や不具合等ございましたらご連絡下さい。\n\n更新履歴\n2019/03/07 : ver1.00 : リリース開始","url":"https://booth.pm/ja/items/1264528","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/9ce17800-a401-475b-8bd9-4309a7f6dc4b/i/1264528/78c14e10-2b8d-4fe1-af5c-c0c5f14e863d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J1MVcHcPda1QRth2ndcbLX3DezzaeyOIQQvFBkly15o="></script>
+    nonce="3Vhm5gpsdUOzznCkCF06JL9u+8hWALgdIVKDGVoumEs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
