--- a/VRChat/38/1263938.html
+++ b/VRChat/38/1263938.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MwidjmQYZmHUszsBMxGCqeP2671CtCU05c2+6oomS8w="></script>
+    "onwZHCWh5mQu84EZOY094NA5Xu63v7UQyatVLgCwNp0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お休みさんのドーナツセット　Ver1.1","description":"【3/12 チョコレート\u0026マシュマロなドーナツを追加しました！】\n\nお休みさんドーナツカフェのドーナツのセットです。\n全20種類+追加3種類のドーナツと、開閉可能なボックス・紙袋のほか、各ドーナツを単品用の紙包みに包んだバージョンを同梱しています。\n\nアバターのアクセサリやワールドの飾りとして使うことを想定しています。\n\nUnity及びVRChatでの使用を想定していますが、fbxファイルおよびテクスチャファイルを同梱していますので、他の3Dモデルやゲームソフト等に組み込んで使用することも可能です。","url":"https://booth.pm/ja/items/1263938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1263938/ca88c106-5847-4e07-ba9e-bda3e3ae11d4_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MwidjmQYZmHUszsBMxGCqeP2671CtCU05c2+6oomS8w="></script>
+    nonce="onwZHCWh5mQu84EZOY094NA5Xu63v7UQyatVLgCwNp0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -649,9 +649,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
